--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
+	<div id="main-container">
+		<div id="panel">
+			<img src="1.PNG" class="panel-image" id="img-one">
+			<img src="2.PNG" class="panel-image" id="img-two">
+			<img src="3.PNG" class="panel-image" id="img-three">
+			<img src="4.PNG " class="panel-image" id="img-four">
+			<img src="5.PNG" class="panel-image" id="img-five">
+			<img src="6.PNG" class="panel-image" id="img-six">
+			<img src="8.PNG" class="panel-image" id="img-eight">
+			<img src="7.PNG" class="panel-image" id="img-seven">
+			<img src="9.PNG" class="panel-image" id="img-nine">
+			<img src="10.PNG" class="panel-image" id="img-ten">
+			<img src="11.PNG" class="panel-image" id="img-eleven">
+			<img src="12.PNG" class="panel-image" id="img-twelve">
+			<img src="13.PNG" class="panel-image" id="img-thirteen">
+			<img src="14.PNG" class="panel-image" id="img-fourteen">
+			<img src="15.PNG" class="panel-image" id="img-fifteen">
+			<img src="16.PNG" class="panel-image" id="img-sixteen">
+			<img src="17.PNG" class="panel-image" id="img-seventeen">
+			<img src="18.PNG" class="panel-image" id="img-eighteen">
+			<img src="19.PNG" class="panel-image" id="img-nineteen">
+			<img src="20.PNG" class="panel-image" id="img-twenty">
+			<img src="21.PNG" class="panel-image" id="img-twenty-one">
+			<img src="22.PNG" class="panel-image" id="img-twenty-two">
+			<img src="23.PNG" class="panel-image" id="img-twenty-three">
+			<img src="24.PNG" class="panel-image" id="img-twenty-four">
+			<img src="25.PNG" class="panel-image" id="img-twenty-five">
+			<img src="26.PNG" class="panel-image" id="img-twenty-six">
+			<img src="27.PNG" class="panel-image" id="img-twenty-seven">
+			<img src="28.PNG" class="panel-image" id="img-twenty-eight">
+			<img src="29.PNG" class="panel-image" id="img-twenty-nine">
+			<img src="30.PNG" class="panel-image" id="img-thirty">
+			<img src="31.PNG" class="panel-image" id="img-thirty-one">
+		</div>
+	</div>
 </body>
 </html>
