fixed background colors + added section text

--- a/index.html
+++ b/index.html
@@ -8,38 +8,63 @@
 </head>
 <body>
 	<div id="main-container">
+		<div id="decorative-text">
+		</div>
+		<div id="text-panel">
+			<div class="title-text">
+				<p id="main-title">the art of gris</p>
+
+				<p id="denial-text-one"> de·ni·al /dəˈnī(ə)l/</p>
+				<p id="denial-text-two"> the action of declaring something to be untrue.</p>
+
+				<p id="anger-text-one">an·ger /ˈaNGgər/</p>
+				<p id="anger-text-two">a strong feeling of annoyance, displeasure, or hostility.</p>
+
+				<p id="bargaining-text-one">bar·gain·ing /ˈbärg(ə)n/</p>
+				<p id="bargaining-text-two">to come to terms; part with something after negotiation but get little or nothing in return.</p>
+
+				<p id="depression-text-one">de·pres·sion /dəˈpreSH(ə)n/</p>
+				<p id="depression-text-two">feelings of severe despondency and dejection.</p>
+
+				<p id="acceptance-text-one">ac·cept·ance /əkˈsept(ə)ns/</p>
+				<p id="acceptance-text-two">willingness to tolerate a difficult or unpleasant situation.</p>
+			</div>
+		</div>
 		<div id="panel">
-			<img src="1.PNG" class="panel-image" id="img-one">
-			<img src="2.PNG" class="panel-image" id="img-two">
-			<img src="3.PNG" class="panel-image" id="img-three">
-			<img src="4.PNG " class="panel-image" id="img-four">
-			<img src="5.PNG" class="panel-image" id="img-five">
-			<img src="6.PNG" class="panel-image" id="img-six">
-			<img src="8.PNG" class="panel-image" id="img-eight">
-			<img src="7.PNG" class="panel-image" id="img-seven">
-			<img src="9.PNG" class="panel-image" id="img-nine">
-			<img src="10.PNG" class="panel-image" id="img-ten">
-			<img src="11.PNG" class="panel-image" id="img-eleven">
-			<img src="12.PNG" class="panel-image" id="img-twelve">
-			<img src="13.PNG" class="panel-image" id="img-thirteen">
-			<img src="14.PNG" class="panel-image" id="img-fourteen">
-			<img src="15.PNG" class="panel-image" id="img-fifteen">
-			<img src="16.PNG" class="panel-image" id="img-sixteen">
-			<img src="17.PNG" class="panel-image" id="img-seventeen">
-			<img src="18.PNG" class="panel-image" id="img-eighteen">
-			<img src="19.PNG" class="panel-image" id="img-nineteen">
-			<img src="20.PNG" class="panel-image" id="img-twenty">
-			<img src="21.PNG" class="panel-image" id="img-twenty-one">
-			<img src="22.PNG" class="panel-image" id="img-twenty-two">
-			<img src="23.PNG" class="panel-image" id="img-twenty-three">
-			<img src="24.PNG" class="panel-image" id="img-twenty-four">
-			<img src="25.PNG" class="panel-image" id="img-twenty-five">
-			<img src="26.PNG" class="panel-image" id="img-twenty-six">
-			<img src="27.PNG" class="panel-image" id="img-twenty-seven">
-			<img src="28.PNG" class="panel-image" id="img-twenty-eight">
-			<img src="29.PNG" class="panel-image" id="img-twenty-nine">
-			<img src="30.PNG" class="panel-image" id="img-thirty">
-			<img src="31.PNG" class="panel-image" id="img-thirty-one">
+			<img src="1.PNG" id="img-one">
+			<img src="2.PNG" id="img-two">
+			<img src="3.PNG" id="img-three">
+			<img src="4.PNG " id="img-four">
+			<img src="5.PNG" id="img-five">
+			<img src="6.PNG" id="img-six">
+			<img src="8.PNG" id="img-eight">
+			<img src="7.PNG" id="img-seven">
+			<img src="9.PNG" id="img-nine">
+			<img src="10.PNG" id="img-ten">
+			<img src="11.PNG" id="img-eleven">
+			<img src="12.PNG" id="img-twelve">
+			<img src="13.PNG" id="img-thirteen">
+			<img src="14.PNG" id="img-fourteen">
+			<img src="15.PNG" id="img-fifteen">
+			<img src="16.PNG" id="img-sixteen">
+			<img src="17.PNG" id="img-seventeen">
+			<img src="18.PNG" id="img-eighteen">
+			<img src="19.PNG" id="img-nineteen">
+			<img src="20.PNG" id="img-twenty">
+			<img src="21.PNG" id="img-twenty-one">
+			<img src="22.PNG" id="img-twenty-two">
+			<img src="23.PNG" id="img-twenty-three">
+			<img src="24.PNG" id="img-twenty-four">
+			<img src="25.PNG" id="img-twenty-five">
+			<img src="26.PNG" id="img-twenty-six">
+			<img src="27.PNG" id="img-twenty-seven">
+			<img src="28.PNG" id="img-twenty-eight">
+			<img src="29.PNG" id="img-twenty-nine">
+			<img src="30.PNG" id="img-thirty">
+			<img src="31.PNG" id="img-thirty-one">
+			<div id="black-filler">
+				<!-- <iframe src="https://www.youtube.com/embed/p2pcqKCNNNU?&amp;autoplay=1&amp;mute=1" frameborder="0" id="cutscene-video"></iframe> -->
+			</div>
 		</div>
 	</div>
 </body>
