swapped to absolute position for the images + added gradient border

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
 	<div id="main-container">
+		<!-- <img src="purple-watercolor-flowers.jpeg" class="image-overlays" id="overlay-one"> -->
 		<div id="decorative-text">
 		</div>
+		<div id="left-panel"></div>
+		<div id="right-panel"></div>
 		<div id="text-panel">
 			<div class="title-text">
 				<p id="main-title">the art of gris</p>
@@ -30,7 +33,6 @@
 				<p id="acceptance-text-two">willingness to tolerate a difficult or unpleasant situation.</p>
 			</div>
 		</div>
-		<div id="panel">
 			<img src="1.PNG" id="img-one">
 			<img src="2.PNG" id="img-two">
 			<img src="3.PNG" id="img-three">
@@ -62,10 +64,6 @@
 			<img src="29.PNG" id="img-twenty-nine">
 			<img src="30.PNG" id="img-thirty">
 			<img src="31.PNG" id="img-thirty-one">
-			<div id="black-filler">
-				<!-- <iframe src="https://www.youtube.com/embed/p2pcqKCNNNU?&amp;autoplay=1&amp;mute=1" frameborder="0" id="cutscene-video"></iframe> -->
-			</div>
-		</div>
-	</div>
+ 	</div>
 </body>
 </html>
