adjusted gradient + added in overlay images + added cutscene link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
 </head>
 <body>
 	<div id="main-container">
-		<!-- <img src="purple-watercolor-flowers.jpeg" class="image-overlays" id="overlay-one"> -->
+		<img src="watercolor-ink.png" class="image-overlays" id="overlay-one">
+		<img src="ink-flower.png" class="image-overlays" id="overlay-two">
+		<img src="orange-watercolor-flowers.png" class="image-overlays" id="overlay-three">
+		<img src="green-watercolor.jpeg" class="image-overlays" id="overlay-four">
+		<img src="orange-and-pink-watercolor-flowers.jpg" class="image-overlays" id="overlay-five">
+		<img src="green-and-blue-watercolor.jpeg" class="image-overlays" id="overlay-six">
+		<img src="red-and-green-watercolor-flowers.jpeg" class="image-overlays" id="overlay-seven">
+		<img src="blue-and-brown-watercolor.jpeg" class="image-overlays" id="overlay-eight">
+		<img src="blue-and-brown-watercolor.jpeg" class="image-overlays" id="overlay-nine">
+		<!-- <img src="ink-stroke.jpeg" class="image-overlays" id="overlay-ten"> -->
+		<img src="pink-linework-flowers.png" class="image-overlays" id="overlay-eleven">
+		<img src="green-watercolor.jpeg" class="image-overlays" id="overlay-twelve">
+		<img src="green-and-blue-watercolor.jpeg" class="image-overlays" id="overlay-thirteen">
+		<img src="orange-watercolor-flowers.png" class="image-overlays" id="overlay-fourteen">
+		<img src="blue-and-brown-watercolor.jpeg" class="image-overlays" id="overlay-fifteen">
+		<img src="blue-and-brown-watercolor-copy.jpeg" class="image-overlays" id="overlay-sixteen">
+		<img src="blue-and-brown-watercolor-copy.jpeg" class="image-overlays" id="overlay-seventeen">
 		<div id="decorative-text">
 		</div>
 		<div id="left-panel"></div>
@@ -31,6 +47,8 @@
 
 				<p id="acceptance-text-one">ac·cept·ance /əkˈsept(ə)ns/</p>
 				<p id="acceptance-text-two">willingness to tolerate a difficult or unpleasant situation.</p>
+
+				<a href="https://www.youtube.com/watch?v=p2pcqKCNNNU&ab_channel=DLegionHeir" id="cutscene-link">cutscenes</a>
 			</div>
 		</div>
 			<img src="1.PNG" id="img-one">
@@ -64,6 +82,9 @@
 			<img src="29.PNG" id="img-twenty-nine">
 			<img src="30.PNG" id="img-thirty">
 			<img src="31.PNG" id="img-thirty-one">
+			<!-- <div id="black-filler">
+				<iframe src="https://www.youtube.com/embed/p2pcqKCNNNU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen id="cutscene-video"></iframe>
+			</div> -->
  	</div>
 </body>
 </html>
