added media query + removed cutscene link

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<p id="acceptance-text-one">ac·cept·ance /əkˈsept(ə)ns/</p>
 				<p id="acceptance-text-two">willingness to tolerate a difficult or unpleasant situation.</p>
 
-				<a href="https://www.youtube.com/watch?v=p2pcqKCNNNU&ab_channel=DLegionHeir" id="cutscene-link">cutscenes</a>
+				<!-- <a href="https://www.youtube.com/watch?v=p2pcqKCNNNU&ab_channel=DLegionHeir" id="cutscene-link">cutscenes</a> -->
 			</div>
 		</div>
 			<img src="1.PNG" id="img-one">
